# rag_mcp_server

./: info.ipynb  main.py  proxy_of_rag.py  pyproject.toml  requirements.txt  server.py  storing_pdf_in_vector_db.ipynb
vector-db/: index.faiss  index.pkl
