[project]
name = "rag-server-with-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "fastmcp>=2.13.0.2",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "python-dotenv>=1.2.1",
]
